--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,13 +26,18 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
 
-      - name: Install dependencies
+      - name: Install root dependencies
+        run: npm install
+        working-directory: ..
+
+      - name: Install ledger-ui dependencies
         run: npm ci
+        working-directory: ./ledger-ui
 
       - name: Build
         run: npm run build
+        working-directory: ./ledger-ui
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
@@ -40,7 +45,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ./dist
+          path: ./ledger-ui/dist
 
   deploy:
     environment:
