--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,21 +22,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: '20'
+          bun-version: latest
 
       - name: Install root dependencies
-        run: npm install
+        run: bun install
         working-directory: ..
 
       - name: Install ledger-ui dependencies
-        run: npm ci
+        run: bun install
         working-directory: ./ledger-ui
 
       - name: Build
-        run: npm run build
+        run: bun run build
         working-directory: ./ledger-ui
 
       - name: Setup Pages
